[package]
name = "pvw"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.17"
rand = "0.8.5"
thiserror = "1.0.50"
ndarray = "0.15.6"
zeroize = "1.7.0"
zeroize_derive = "1.4.2"
rand_chacha = "0.3" 

fhe-math = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat", package = "fhe-math" }
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat", package = "fhe-util" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat", package = "fhe-traits" }