[package]
name = "pvw"
version = "0.1.0"
edition = "2024"
authors = ["Gnosis Guild"]
description = "A pure-Rust implementation of the PVW (Peikert–Vaikuntanathan–Waters) multi-receiver LWE encryption scheme."
homepage = "https://github.com/gnosisguild/pvw-rs"
repository = "https://github.com/gnosisguild/pvw-rs"
license = "MIT"
readme = "README.md"
keywords = ["mathematics", "numerics", "bignum", "polynomials", "cryptography", "pvw"]
categories = ["mathematics", "cryptography", "science"]
rust-version = "1.86.0"

[dependencies]
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2"
rand = "0.8.5"
thiserror = "1.0"
ndarray = "0.15.6"
zeroize = "1.7.0"
zeroize_derive = "1.4.2"
rand_chacha = "0.3" 
rayon = "1.10.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
bincode = { version = "1.3", optional = true }

fhe-math = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat", package = "fhe-math" }
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat", package = "fhe-util" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat", package = "fhe-traits" }
console = "0.16.0"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "dep:bincode"]

[[bench]]
name = "pvw"
harness = false